--- a/BangTin.html
+++ b/BangTin.html
@@ -4,8 +4,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Goc Phu Huynh</title>
-     <link rel="stylesheet" href="/css/BangTin.css">
-     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
+     <link rel="stylesheet" href="css/BangTin.css">
+     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
      <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -35,36 +35,36 @@
       </div>
       <!-- --------End: Introduce---------- -->
       <div id="nav">
-        <img src="/img/mainlogo.png" alt="logo" />
+        <img src="img/mainlogo.png" alt="logo" />
         <ul class="nav_list">
           <li>
-            <a href="/Home.html"
+            <a href="Home.html"
               ><i class="fa-solid fa-house"></i>
               Trang Chủ
             </a>
           </li>
           <li>
-            <a href="/PhuHuynh.html">Góc Phụ Huynh</a>
+            <a href="PhuHuynh.html">Góc Phụ Huynh</a>
           </li>
           <li>
             <a style="width: 125.5px" href="#">Góc của bé ♥</a>
             <ul class="subnav">
               <li>
-                <a href="/ThucDon.html">Thực đơn</a>
+                <a href="ThucDon.html">Thực đơn</a>
               </li>
               <li>
-                <a href="/LichHoc.html">Lịch học</a>
+                <a href="LichHoc.html">Lịch học</a>
               </li>
             </ul>
           </li>
           <li>
-            <a style="width: 125.5px" href="/BangTin.html">Bản Tin</a>
+            <a style="width: 125.5px" href="BangTin.html">Bản Tin</a>
           </li>
           <li>
-            <a href="/TuyenSinh.html">Tuyển Sinh</a>
+            <a href="TuyenSinh.html">Tuyển Sinh</a>
           </li>
           <li>
-            <a style="width: 108px" href="/LienHe.html">Liên Hệ</a>
+            <a style="width: 108px" href="LienHe.html">Liên Hệ</a>
           </li>
           <i class="fa-solid fa-magnifying-glass"></i>
         </ul>
@@ -74,7 +74,7 @@
          <div id="bantin">
             <h1>Bản Tin Cộng Đồng</h1>          
          </div>        
-      <div class="khung2"><img src="/img/funny.jpg" alt=""></div>
+      <div class="khung2"><img src="img/funny.jpg" alt=""></div>
       <div id="khung">      
         <div class="bantin1">
           <p><strong>Thông tin hội thảo cộng đồng</strong> • 1/1/2024</p>
@@ -118,7 +118,7 @@
           </div>     
         </p>
       </div>
-      <div class="khung2"><img src="/img/child_1.jpg" alt=""></div>
+      <div class="khung2"><img src="img/child_1.jpg" alt=""></div>
     </div>
 
   </div>
@@ -152,7 +152,7 @@
       </div>
       <img
         style="padding-left: 200px"
-        src="/img/logo_1.png"
+        src="img/logo_1.png"
         alt="banner"
         class="banner"
       />
