--- a/LichHoc.html
+++ b/LichHoc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goc Phu Huynh</title>
     <link rel="stylesheet" href="css/LichHoc.css">
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -35,36 +35,36 @@
       </div>
       <!-- --------End: Introduce---------- -->
       <div id="nav">
-        <img src="/img/mainlogo.png" alt="logo" />
+        <img src="img/mainlogo.png" alt="logo" />
         <ul class="nav_list">
           <li>
-            <a href="/Home.html"
+            <a href="Home.html"
               ><i class="fa-solid fa-house"></i>
               Trang Chủ
             </a>
           </li>
           <li>
-            <a href="/PhuHuynh.html">Góc Phụ Huynh</a>
+            <a href="PhuHuynh.html">Góc Phụ Huynh</a>
           </li>
           <li>
             <a style="width: 125.5px" href="#">Góc của bé ♥</a>
             <ul class="subnav">
               <li>
-                <a href="/ThucDon.html">Thực đơn</a>
+                <a href="ThucDon.html">Thực đơn</a>
               </li>
               <li>
-                <a href="/LichHoc.html">Lịch học</a>
+                <a href="LichHoc.html">Lịch học</a>
               </li>
             </ul>
           </li>
           <li>
-            <a style="width: 125.5px" href="/BangTin.html">Bản Tin</a>
+            <a style="width: 125.5px" href="BangTin.html">Bản Tin</a>
           </li>
           <li>
-            <a href="/TuyenSinh.html">Tuyển Sinh</a>
+            <a href="TuyenSinh.html">Tuyển Sinh</a>
           </li>
           <li>
-            <a style="width: 108px" href="/LienHe.html">Liên Hệ</a>
+            <a style="width: 108px" href="LienHe.html">Liên Hệ</a>
           </li>
           <i class="fa-solid fa-magnifying-glass"></i>
         </ul>
@@ -97,7 +97,7 @@
         <span>Phát Triển Kỹ Năng Âm Nhạc và Nghệ Thuật:<br></span>
           Tham gia vào các hoạt động nhạc và nghệ thuật để phát triển sở thích và kỹ năng sáng tạo.
           Lớp mầm non thường tập trung vào việc tạo ra môi trường học tập tích cực và hỗ trợ, nơi trẻ có thể phát triển toàn diện và chuẩn bị cho các cấp học tiếp theo.</h3>
-          <img  src="/img/lichhoc.png" alt="Thời khóa biểu của bé">
+          <img  src="img/lichhoc.png" alt="Thời khóa biểu của bé">
     </div>  
   </div>
   <div id="footer">
@@ -130,7 +130,7 @@
       </div>
       <img
         style="padding-left: 200px"
-        src="/img/logo_1.png"
+        src="img/logo_1.png"
         alt="banner"
         class="banner"
       />
