--- a/LienHe.html
+++ b/LienHe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goc Phu Huynh</title>
     <link rel="stylesheet" href="css/LienHe.css">
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -35,36 +35,36 @@
       </div>
       <!-- --------End: Introduce---------- -->
       <div id="nav">
-        <img src="/img/mainlogo.png" alt="logo" />
+        <img src="img/mainlogo.png" alt="logo" />
         <ul class="nav_list">
           <li>
-            <a href="/Home.html"
+            <a href="Home.html"
               ><i class="fa-solid fa-house"></i>
               Trang Chủ
             </a>
           </li>
           <li>
-            <a href="/PhuHuynh.html">Góc Phụ Huynh</a>
+            <a href="PhuHuynh.html">Góc Phụ Huynh</a>
           </li>
           <li>
             <a style="width: 125.5px" href="#">Góc của bé ♥</a>
             <ul class="subnav">
               <li>
-                <a href="/ThucDon.html">Thực đơn</a>
+                <a href="ThucDon.html">Thực đơn</a>
               </li>
               <li>
-                <a href="/LichHoc.html">Lịch học</a>
+                <a href="LichHoc.html">Lịch học</a>
               </li>
             </ul>
           </li>
           <li>
-            <a style="width: 125.5px" href="/BangTin.html">Bản Tin</a>
+            <a style="width: 125.5px" href="BangTin.html">Bản Tin</a>
           </li>
           <li>
-            <a href="/TuyenSinh.html">Tuyển Sinh</a>
+            <a href="TuyenSinh.html">Tuyển Sinh</a>
           </li>
           <li>
-            <a style="width: 108px" href="/LienHe.html">Liên Hệ</a>
+            <a style="width: 108px" href="LienHe.html">Liên Hệ</a>
           </li>
           <i class="fa-solid fa-magnifying-glass"></i>
         </ul>
@@ -73,7 +73,7 @@
   <div id="cover">
     <div class="box_content">
         <div class="tilte"><h1>Thông Tin Liên Hệ </h1></div>
-        <img class="cloud_img" src="/img/cloud.png" alt="đám mây">
+        <img class="cloud_img" src="img/cloud.png" alt="đám mây">
     </div>
     <div id="slider">
         <div class="icon_list">
@@ -130,7 +130,7 @@
       </div>
       <img
         style="padding-left: 200px"
-        src="/img/logo_1.png"
+        src="img/logo_1.png"
         alt="banner"
         class="banner"
       />
