--- a/TuyenSinh.html
+++ b/TuyenSinh.html
@@ -35,36 +35,36 @@
       </div>
       <!-- --------End: Introduce---------- -->
       <div id="nav">
-        <img src="/img/mainlogo.png" alt="logo" />
+        <img src="img/mainlogo.png" alt="logo" />
         <ul class="nav_list">
           <li>
-            <a href="/Home.html"
+            <a href="Home.php"
               ><i class="fa-solid fa-house"></i>
               Trang Chủ
             </a>
           </li>
           <li>
-            <a href="/PhuHuynh.html">Góc Phụ Huynh</a>
+            <a href="PhuHuynh.html">Góc Phụ Huynh</a>
           </li>
           <li>
             <a style="width: 125.5px" href="#">Góc của bé ♥</a>
             <ul class="subnav">
               <li>
-                <a href="/ThucDon.html">Thực đơn</a>
+                <a href="ThucDon.html">Thực đơn</a>
               </li>
               <li>
-                <a href="/LichHoc.html">Lịch học</a>
+                <a href="LichHoc.html">Lịch học</a>
               </li>
             </ul>
           </li>
           <li>
-            <a style="width: 125.5px" href="/BangTin.html">Bản Tin</a>
+            <a style="width: 125.5px" href="BangTin.html">Bản Tin</a>
           </li>
           <li>
-            <a href="/TuyenSinh.html">Tuyển Sinh</a>
+            <a href="TuyenSinh.html">Tuyển Sinh</a>
           </li>
           <li>
-            <a style="width: 108px" href="/LienHe.html">Liên Hệ</a>
+            <a style="width: 108px" href="LienHe.html">Liên Hệ</a>
           </li>
           <i class="fa-solid fa-magnifying-glass"></i>
         </ul>
@@ -95,7 +95,7 @@
         </form>
 
       </div>
-      <video autoplay src="/img/TruongManNonAnLanh.mp4" type="video/mp4" loop ></video>
+      <video autoplay src="img/TruongManNonAnLanh.mp4" type="video/mp4" loop ></video>
   </div>
 </div>
   <!--  -->
@@ -129,7 +129,7 @@
       </div>
       <img
         style="padding-left: 200px"
-        src="/img/logo_1.png"
+        src="img/logo_1.png"
         alt="banner"
         class="banner"
       />
