--- a/PhuHuynh.html
+++ b/PhuHuynh.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goc Phu Huynh</title>
-    <link rel="stylesheet" href="/css/PhuHuynh.css">
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/PhuHuynh.css">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -35,25 +36,25 @@
       </div>
       <!-- --------End: Introduce---------- -->
       <div id="nav">
-        <img src="/img/mainlogo.png" alt="logo" />
+        <img src="img/mainlogo.png" alt="logo" />
         <ul class="nav_list">
           <li>
-            <a href="/Home.html"
+            <a href="Home.html"
               ><i class="fa-solid fa-house"></i>
               Trang Chủ
             </a>
           </li>
           <li>
-            <a href="/PhuHuynh.html">Góc Phụ Huynh</a>
+            <a href="PhuHuynh.html">Góc Phụ Huynh</a>
           </li>
           <li>
             <a style="width: 125.5px" href="#">Góc của bé ♥</a>
             <ul class="subnav">
               <li>
-                <a href="/ThucDon.html">Thực đơn</a>
+                <a href="ThucDon.html">Thực đơn</a>
               </li>
               <li>
-                <a href="/LichHoc.html">Lịch học</a>
+                <a href="LichHoc.html">Lịch học</a>
               </li>
             </ul>
           </li>
@@ -61,7 +62,7 @@
             <a style="width: 125.5px" href="/BangTin.html">Bản Tin</a>
           </li>
           <li>
-            <a href="/TuyenSinh.html">Tuyển Sinh</a>
+            <a href="TuyenSinh.html">Tuyển Sinh</a>
           </li>
           <li>
             <a style="width: 108px" href="/LienHe.html">Liên Hệ</a>
@@ -74,23 +75,30 @@
   <div id="cover">
     <div id="content">
       <div class="same_box">
-        <img src="/img/logo.png" alt="ảnh content">
+        <img src="img/logo.png" alt="ảnh content">
         <p class="topic">Thông báo Về việc chi trả kinh phí hỗ trợ học phí cho học sinh học tháng 4 và 5 năm học 2021 - 2022 do ảnh hưởng của dịch Covid-19</p><br>
         <p>Thực hiện kế hoạch số 167/KH-BCĐ ngày 24/5/2021 của Ban chỉ đạo tuyển sinh Quận Hà Đông về việc tuyển sinh vào các trường mầm non, lớp 1, lớp 6 năm học 2021 - 2022;Căn cứ tình hình thực tế, Trường mầm non Hoa Mai thông báo về việc tuyển sinh năm học 2021 - 2022 cụ thể như sau</p>
       </div>
+      <a style="text-decoration: none;" href="">
+        <div class="same_box">
+          <div class="row">
+            <div class="col-md-4 d-flex justify-content-center"><img style="" src="img/logo.png" alt="ảnh content"></div>
+            <div class="col-md-8">
+              <p class="topic">Thông báo tuyển sinh năm học 2021 - 2022</p><br>
+              <p style="font-size:16px;">Thực hiện Nghị quyết số 08/NQ/2021/NQ-HĐND ngày 23/9/2021 của HĐND thành phố quy định mức thu học phí đối với các cơ sở giáo dục mầm non, giáo dục phổ thông công lập của Thành phố Hà Nội năm học 2021-2022 (sau đây gọi tắt là NQ08)Căn cứ Quyết định số 4942/QĐ-UBND ngày 26/10/2022 của UBND quận Hà Đông về việc cấp bổ sung dự toán chi NSNN năm 2022 để thực hiện hỗ trợ học phí học kỳ II năm học 2021 - 2022 do ảnh hưởng của dịch Covid-19 theo NQ08</p>
+              <span style="color:#2e2a2a;">Thời gian đăng bài: </span> <span>21/4/2003 21:30</span>
+            </div>
+          </div>
+        </div>
+      </a>
       <div class="same_box">
-        <img src="/img/logo.png" alt="ảnh content">
-        <p class="topic">Thông báo tuyển sinh năm học 2021 - 2022</p><br>
-        <p>Thực hiện Nghị quyết số 08/NQ/2021/NQ-HĐND ngày 23/9/2021 của HĐND thành phố quy định mức thu học phí đối với các cơ sở giáo dục mầm non, giáo dục phổ thông công lập của Thành phố Hà Nội năm học 2021-2022 (sau đây gọi tắt là NQ08)Căn cứ Quyết định số 4942/QĐ-UBND ngày 26/10/2022 của UBND quận Hà Đông về việc cấp bổ sung dự toán chi NSNN năm 2022 để thực hiện hỗ trợ học phí học kỳ II năm học 2021 - 2022 do ảnh hưởng của dịch Covid-19 theo NQ08</p>
-      </div>
-      <div class="same_box">
-        <img src="/img/logo.png" alt="ảnh content">
+        <img src="img/logo.png" alt="ảnh content">
         <p class="topic">Thông báo về việc nghỉ Lễ Giỗ Tổ Hùng Vương (mùng 10/3)</p><br>
         <p>Căn cứ Điều 115 quy định về ngày nghỉ Lễ, Tết tại Bộ luật Lao động, trường mầm non Hoa Mai trân trọng thông báo về thời gian nghỉ giao dịch trong dịp Lễ Giỗ Tổ Hùng Vương năm 2021</p><br>
         <p>Thông tin từ Bộ giáo dục và đào tạo</p>
       </div>
-      <div class="same_box">
-        <img src="/img/logo.png" alt="ảnh content">
+      <div class="same_box"> 
+        <img src="img/logo.png" alt="ảnh content">
         <p class="topic">Thông báo Về việc chi trả kinh phí hỗ trợ học phí cho học sinh học tháng 4 và 5 năm học 2021 - 2022 do ảnh hưởng của dịch Covid-19</p><br>
         <p>Thực hiện kế hoạch số 167/KH-BCĐ ngày 24/5/2021 của Ban chỉ đạo tuyển sinh Quận Hà Đông về việc tuyển sinh vào các trường mầm non, lớp 1, lớp 6 năm học 2021 - 2022;Căn cứ tình hình thực tế, Trường mầm non Hoa Mai thông báo về việc tuyển sinh năm học 2021 - 2022 cụ thể như sau</p>
       </div>
@@ -127,7 +135,7 @@
     </div>
     <img
       style="padding-left: 200px"
-      src="/img/logo_1.png"
+      src="img/logo_1.png"
       alt="banner"
       class="banner"
     />
