--- a/ThucDon.html
+++ b/ThucDon.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goc Phu Huynh</title>
-    <link rel="stylesheet" href="/css/ThucDon.css" />
-    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/ThucDon.css" />
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -35,36 +35,36 @@
         </div>
         <!-- --------End: Introduce---------- -->
         <div id="nav">
-          <img src="/img/mainlogo.png" alt="logo" />
+          <img src="img/mainlogo.png" alt="logo" />
           <ul class="nav_list">
             <li>
-              <a href="/Home.html"
+              <a href="Home.html"
                 ><i class="fa-solid fa-house"></i>
                 Trang Chủ
               </a>
             </li>
             <li>
-              <a href="/PhuHuynh.html">Góc Phụ Huynh</a>
+              <a href="PhuHuynh.html">Góc Phụ Huynh</a>
             </li>
             <li>
               <a style="width: 125.5px" href="#">Góc của bé ♥</a>
               <ul class="subnav">
                 <li>
-                  <a href="/ThucDon.html">Thực đơn</a>
+                  <a href="ThucDon.html">Thực đơn</a>
                 </li>
                 <li>
-                  <a href="/LichHoc.html">Lịch học</a>
+                  <a href="LichHoc.html">Lịch học</a>
                 </li>
               </ul>
             </li>
             <li>
-              <a style="width: 125.5px" href="/BangTin.html">Bản Tin</a>
+              <a style="width: 125.5px" href="BangTin.html">Bản Tin</a>
             </li>
             <li>
-              <a href="/TuyenSinh.html">Tuyển Sinh</a>
+              <a href="TuyenSinh.html">Tuyển Sinh</a>
             </li>
             <li>
-              <a style="width: 108px" href="/LienHe.html">Liên Hệ</a>
+              <a style="width: 108px" href="LienHe.html">Liên Hệ</a>
             </li>
             <i class="fa-solid fa-magnifying-glass"></i>
           </ul>
@@ -116,7 +116,7 @@
         </h5>
         <img
           style="padding-top: 10px; margin-left: 150px"
-          src="/img/under_2age.png"
+          src="img/under_2age.png"
           alt="Menu_under_2"
         />
         <h5 style="text-decoration: underline">Ở độ tuổi 3 - 5 tuổi</h5>
@@ -133,7 +133,7 @@
             padding-top: 10px;
             margin-left: 150px;
           "
-          src="/img/over_2age.png"
+          src="img/over_2age.png"
           alt=""
         />
       </div>
@@ -168,7 +168,7 @@
         </div>
         <img
           style="padding-left: 200px"
-          src="/img/logo_1.png"
+          src="img/logo_1.png"
           alt="banner"
           class="banner"
         />
